# Synapse

./: .gitignore  docker-compose.dev.yaml  docker-compose.yaml
.github/workflows/: deploy.yml
homework_service/: go.mod  go.sum
homework_service/cmd/server/: main.go
homework_service/internal/config/: config.go
homework_service/internal/schedule/: schedule.go
homework_service/internal/store/: HomeworkStore.go
homework_service/migrations/: 000001_create_user_tables.up.sql
lib/log-config/: pyproject.toml
lib/log-config/log_config/: log_config.py
lib/log-config/log_config.egg-info/: PKG-INFO  SOURCES.txt
pc_controller/: go.mod  main.go
schedule_service/: Dockerfile  pyproject.toml
schedule_service/app/: main.py
schedule_service/app/core/: config.py  redis.py  taskiq_app.py
schedule_service/app/proto/schedule/: schedule_pb2.py  schedule_pb2_grpc.py
schedule_service/app/schemas/: find_changes.py  schedule.py
schedule_service/app/services/: schedule.py
schedule_service/app/tasks/: bot.py
schedule_service/app/utils/: find_changes.py  group.py  parser.py
tg_bot_service/: Dockerfile  alembic.ini  pyproject.toml
tg_bot_service/app/: main.py  pre_restart.py  test.py
tg_bot_service/app/core/: config.py  dao.py  database.py  taskiq_app.py
tg_bot_service/app/dao/: last_message.py  user.py
tg_bot_service/app/handlers/: admin.py  base.py  schedule.py
tg_bot_service/app/migration/: env.py
tg_bot_service/app/migration/versions/: 39006e4f538d_add_new_table.py  6cfeadac1703_edit.py  75999da9b3e7_edit.py  c9fdb6543d67_change_tg_id_to_bigint.py  e1d02e84489f_initial_revision.py
tg_bot_service/app/models/: last_message.py  link.py  user.py
tg_bot_service/app/schemas/: user.py
tg_bot_service/app/services/: link.py  schedule.py  user.py
tg_bot_service/app/tasks/: bot.py
tg_bot_service/app/utils/: formatter.py  message.py  schedule.py  strings.py
tg_bot_service/scripts/: prestart.sh
yandex_service/: Dockerfile  coverage.out  go.mod  go.sum
yandex_service/cmd/server/: main.go
yandex_service/internal/integration/schedule/: schedule.go
yandex_service/internal/yandex/: handler.go  request.go  response.go  schedule.go
yandex_service/pkg/config/: config.go
yandex_service/pkg/respond/: respond.go
yandex_service/pkg/utils/week/: search_weekday.go  search_weekday_test.go
