[project]
name = "schedule-service"
version = "0.1.0"
description = ""
authors = [
    {name = "lorsan",email = "stasstrochewskij@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "colorlog (>=6.10.1,<7.0.0)",
    "redis (>=7.1.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
