[project]
name = "tg-bot-service"
version = "0.1.0"
description = ""
authors = [
    {name = "lorsan",email = "stasstrochewskij@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiogram (>=3.24.0,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
