[project]
name = "tg-bot-service"
version = "0.1.0"
description = ""
authors = [
    {name = "lorsan",email = "stasstrochewskij@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiogram (>=3.24.0,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "my-shared-logger @ ../lib/log-config",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "taskiq-aio-pika (>=0.5.0,<0.6.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "redis (>=7.1.1,<8.0.0)",
    "fastapi[standard] (>=0.129.0,<0.130.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
